--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "api_library_handler",
   "version": "1.0.0",
-  "description": "",
+  "description": "an api to handle a library with multiple features",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --coverage"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "fastify": "^3.22.0"
+    "fastify": "^3.22.0",
+    "ts-jest": "^27.0.5"
   },
   "devDependencies": {
-    "@types/node": "^16.10.3"
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.3",
+    "dotenv": "^10.0.0",
+    "jest": "^27.2.4",
+    "typescript": "^4.4.3"
   }
 }
