--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "test": "jest --watchAll --coverage",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll --runInBand"
   },
   "keywords": [],
   "author": "Tan KARASU - karasutan@gmail.com",
