--- a/package.json
+++ b/package.json
@@ -18,7 +18,14 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/node": "^16.10.3",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "jest": "^27.2.4",
     "typescript": "^4.4.3"
   }
