--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
     "node": true
   },
   "extends": [
-    "standard"
+    "standard",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -57,6 +59,7 @@
     "camelcase": "error",
     "no-trailing-spaces": "warn",
     "no-inline-comments": "error",
+    "newline-before-return": "error",
     "sort-imports": "off",
     "sort-keys": "off",
     "max-len": [
@@ -135,7 +138,11 @@
         "ignoreRestArgs": true
       }
     ],
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/no-empty-interface": "error",
+    "@typescript-eslint/no-inferrable-types": "error",
+    "@typescript-eslint/prefer-nullish-coalescing": "error",
+    "@typescript-eslint/strict-null-check": "error"
   },
   "overrides": [
     {
